// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BookList /> booksが変更されたとき 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookList
    books={
      Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "jancode": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "jancode": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "jancode": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "jancode": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "jancode": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 1,
          "image": "none",
          "jancode": "9784873113944",
          "published": "2009-01-26T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "プログラミング言語 Ruby",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 23,
          "image": "none",
          "jancode": "9780987678909",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 25,
          "image": "none",
          "jancode": "9780987678988",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングR",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 20,
          "image": "none",
          "jancode": "9780004195095",
          "published": "2014-04-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 26,
          "image": "none",
          "isbn": "9789867165289",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "Docker実践ガイド impress top gearシリーズ",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 27,
          "image": "none",
          "isbn": "9784949999120",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 28,
          "image": "none",
          "isbn": "9784063300468",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 11,
              "name": "C",
            },
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 16,
              "name": "PHP",
            },
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "タグテスト",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 29,
          "image": "none",
          "isbn": "9784797363821",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 30,
          "image": "none",
          "isbn": "9784797372410",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "React",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 33,
          "image": "none",
          "isbn": "9784834002720",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 14,
              "name": "CSS",
            },
          ],
          "title": "バーコード最終確認",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 34,
          "image": "none",
          "isbn": "9784774193830",
          "published": "2017-11-21T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 15,
              "name": "TypeScript",
            },
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "intellj IDEA",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 13,
          "image": "none",
          "isbn": "9784844338154",
          "published": "2018-02-09T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "基礎Ruby on Rails",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 35,
          "image": "none",
          "isbn": "9784774172736",
          "published": "2015-05-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "jquery",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 46,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24090349.png",
          "isbn": "9784048678841",
          "published": "2010-03-02T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "リファクタリングRuby",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 15,
          "image": "none",
          "isbn": "9784873115658",
          "published": "2016-04-11T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "リーダブルコード",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 48,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24102621.png",
          "isbn": "9784798118154",
          "published": "2008-12-03T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "zsh最強シェル入門",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 36,
          "image": "none",
          "isbn": "9784873114996",
          "published": "2018-02-16T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "BeingGeek",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 47,
          "image": "none",
          "isbn": "9784844365501",
          "published": "2015-12-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "ランディングページデザインメソッド",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-18T00:00:00Z",
          "id": 43,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SunMar18111526.png",
          "isbn": "9784569808581",
          "published": "2018-02-18T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-18T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 49,
          "image": "none",
          "isbn": "9784865940046",
          "published": "2018-03-23T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 50,
          "image": "none",
          "isbn": "9784048933070",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "社畜ちゃん",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 51,
          "image": "none",
          "isbn": "9784063766417",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 52,
          "image": "none",
          "isbn": "9784063766424",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン2",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 56,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24132702.png",
          "isbn": "9784063766516",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン3",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 58,
          "image": "none",
          "isbn": "9784063766639",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [
            Object {
              "id": 2,
              "name": "Android",
            },
            Object {
              "id": 10,
              "name": "Python",
            },
          ],
          "title": "デビルマン4",
          "updated_at": "2018-03-24T00:00:00Z",
        },
      ]
    }
    isLoading={false}
    onRefresh={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ListEmptyComponent": [Function],
      "data": Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "isbn": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "isbn": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "isbn": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "isbn": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "isbn": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 1,
          "image": "none",
          "isbn": "9784873113944",
          "published": "2009-01-26T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "プログラミング言語 Ruby",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 23,
          "image": "none",
          "isbn": "9780987678909",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 25,
          "image": "none",
          "isbn": "9780987678988",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングR",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 20,
          "image": "none",
          "isbn": "9780004195095",
          "published": "2014-04-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 26,
          "image": "none",
          "isbn": "9789867165289",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "Docker実践ガイド impress top gearシリーズ",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 27,
          "image": "none",
          "isbn": "9784949999120",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 28,
          "image": "none",
          "isbn": "9784063300468",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 11,
              "name": "C",
            },
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 16,
              "name": "PHP",
            },
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "タグテスト",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 29,
          "image": "none",
          "isbn": "9784797363821",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 30,
          "image": "none",
          "isbn": "9784797372410",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "React",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 33,
          "image": "none",
          "isbn": "9784834002720",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 14,
              "name": "CSS",
            },
          ],
          "title": "バーコード最終確認",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 34,
          "image": "none",
          "isbn": "9784774193830",
          "published": "2017-11-21T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 15,
              "name": "TypeScript",
            },
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "intellj IDEA",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 13,
          "image": "none",
          "isbn": "9784844338154",
          "published": "2018-02-09T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "基礎Ruby on Rails",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 35,
          "image": "none",
          "isbn": "9784774172736",
          "published": "2015-05-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "jquery",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 46,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24090349.png",
          "isbn": "9784048678841",
          "published": "2010-03-02T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "リファクタリングRuby",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 15,
          "image": "none",
          "isbn": "9784873115658",
          "published": "2016-04-11T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "リーダブルコード",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 48,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24102621.png",
          "isbn": "9784798118154",
          "published": "2008-12-03T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "zsh最強シェル入門",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 36,
          "image": "none",
          "isbn": "9784873114996",
          "published": "2018-02-16T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "BeingGeek",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 47,
          "image": "none",
          "isbn": "9784844365501",
          "published": "2015-12-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "ランディングページデザインメソッド",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-18T00:00:00Z",
          "id": 43,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SunMar18111526.png",
          "isbn": "9784569808581",
          "published": "2018-02-18T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-18T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 49,
          "image": "none",
          "isbn": "9784865940046",
          "published": "2018-03-23T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 50,
          "image": "none",
          "isbn": "9784048933070",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "社畜ちゃん",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 51,
          "image": "none",
          "isbn": "9784063766417",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 52,
          "image": "none",
          "isbn": "9784063766424",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン2",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 56,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24132702.png",
          "isbn": "9784063766516",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン3",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 58,
          "image": "none",
          "isbn": "9784063766639",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [
            Object {
              "id": 2,
              "name": "Android",
            },
            Object {
              "id": 10,
              "name": "Python",
            },
          ],
          "title": "デビルマン4",
          "updated_at": "2018-03-24T00:00:00Z",
        },
      ],
      "disableVirtualization": false,
      "extraData": Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "isbn": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "isbn": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "isbn": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "isbn": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "isbn": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 1,
          "image": "none",
          "isbn": "9784873113944",
          "published": "2009-01-26T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "プログラミング言語 Ruby",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 23,
          "image": "none",
          "isbn": "9780987678909",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 25,
          "image": "none",
          "isbn": "9780987678988",
          "published": "2014-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングR",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-14T00:00:00Z",
          "id": 20,
          "image": "none",
          "isbn": "9780004195095",
          "published": "2014-04-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "スターティングRuby",
          "updated_at": "2018-03-14T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 26,
          "image": "none",
          "isbn": "9789867165289",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "Docker実践ガイド impress top gearシリーズ",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 27,
          "image": "none",
          "isbn": "9784949999120",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 28,
          "image": "none",
          "isbn": "9784063300468",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 11,
              "name": "C",
            },
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 16,
              "name": "PHP",
            },
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "タグテスト",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 29,
          "image": "none",
          "isbn": "9784797363821",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "ReactNative",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 30,
          "image": "none",
          "isbn": "9784797372410",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
            Object {
              "id": 2,
              "name": "Android",
            },
          ],
          "title": "React",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-15T00:00:00Z",
          "id": 33,
          "image": "none",
          "isbn": "9784834002720",
          "published": "2018-02-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 13,
              "name": "HTML",
            },
            Object {
              "id": 14,
              "name": "CSS",
            },
          ],
          "title": "バーコード最終確認",
          "updated_at": "2018-03-15T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 34,
          "image": "none",
          "isbn": "9784774193830",
          "published": "2017-11-21T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 15,
              "name": "TypeScript",
            },
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "intellj IDEA",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 13,
          "image": "none",
          "isbn": "9784844338154",
          "published": "2018-02-09T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 1,
              "name": "Ruby",
            },
          ],
          "title": "基礎Ruby on Rails",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 35,
          "image": "none",
          "isbn": "9784774172736",
          "published": "2015-05-15T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 12,
              "name": "JavaScript",
            },
          ],
          "title": "jquery",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 46,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24090349.png",
          "isbn": "9784048678841",
          "published": "2010-03-02T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "リファクタリングRuby",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 15,
          "image": "none",
          "isbn": "9784873115658",
          "published": "2016-04-11T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "リーダブルコード",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 48,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24102621.png",
          "isbn": "9784798118154",
          "published": "2008-12-03T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "zsh最強シェル入門",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-16T00:00:00Z",
          "id": 36,
          "image": "none",
          "isbn": "9784873114996",
          "published": "2018-02-16T00:00:00Z",
          "status": false,
          "tags": Array [
            Object {
              "id": 17,
              "name": "People",
            },
          ],
          "title": "BeingGeek",
          "updated_at": "2018-03-16T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 47,
          "image": "none",
          "isbn": "9784844365501",
          "published": "2015-12-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "ランディングページデザインメソッド",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-18T00:00:00Z",
          "id": 43,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SunMar18111526.png",
          "isbn": "9784569808581",
          "published": "2018-02-18T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-18T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 49,
          "image": "none",
          "isbn": "9784865940046",
          "published": "2018-03-23T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "てすと",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 50,
          "image": "none",
          "isbn": "9784048933070",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "社畜ちゃん",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 51,
          "image": "none",
          "isbn": "9784063766417",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 52,
          "image": "none",
          "isbn": "9784063766424",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン2",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 56,
          "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24132702.png",
          "isbn": "9784063766516",
          "published": "2018-02-24T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "デビルマン3",
          "updated_at": "2018-03-24T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-24T00:00:00Z",
          "id": 58,
          "image": "none",
          "isbn": "9784063766639",
          "published": "2018-02-24T00:00:00Z",
          "status": true,
          "tags": Array [
            Object {
              "id": 2,
              "name": "Android",
            },
            Object {
              "id": 10,
              "name": "Python",
            },
          ],
          "title": "デビルマン4",
          "updated_at": "2018-03-24T00:00:00Z",
        },
      ],
      "horizontal": false,
      "initialNumToRender": 10,
      "keyExtractor": [Function],
      "maxToRenderPerBatch": 10,
      "numColumns": 1,
      "onEndReachedThreshold": 2,
      "onRefresh": [MockFunction],
      "refreshing": false,
      "renderItem": [Function],
      "scrollEventThrottle": 50,
      "style": Object {
        "flex": 1,
        "marginTop": 0,
        "padding": 0,
      },
      "updateCellsBatchingPeriod": 50,
      "windowSize": 21,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ListEmptyComponent": [Function],
        "data": Array [
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 2,
            "image": "none",
            "isbn": "9784774184111",
            "published": "2018-02-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "javascript ",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 14,
            "image": "none",
            "isbn": "9784774183923",
            "published": "2018-02-12T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ghj",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 16,
            "image": "none",
            "isbn": "9780004195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングGo言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 17,
            "image": "none",
            "isbn": "9780104195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 19,
            "image": "none",
            "isbn": "9781111115025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 1,
            "image": "none",
            "isbn": "9784873113944",
            "published": "2009-01-26T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
            ],
            "title": "プログラミング言語 Ruby",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 23,
            "image": "none",
            "isbn": "9780987678909",
            "published": "2014-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングRuby",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 25,
            "image": "none",
            "isbn": "9780987678988",
            "published": "2014-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングR",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 20,
            "image": "none",
            "isbn": "9780004195095",
            "published": "2014-04-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "スターティングRuby",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 26,
            "image": "none",
            "isbn": "9789867165289",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "Docker実践ガイド impress top gearシリーズ",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 27,
            "image": "none",
            "isbn": "9784949999120",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ReactNative",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 28,
            "image": "none",
            "isbn": "9784063300468",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 11,
                "name": "C",
              },
              Object {
                "id": 13,
                "name": "HTML",
              },
              Object {
                "id": 16,
                "name": "PHP",
              },
              Object {
                "id": 1,
                "name": "Ruby",
              },
              Object {
                "id": 2,
                "name": "Android",
              },
            ],
            "title": "タグテスト",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 29,
            "image": "none",
            "isbn": "9784797363821",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 12,
                "name": "JavaScript",
              },
            ],
            "title": "ReactNative",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 30,
            "image": "none",
            "isbn": "9784797372410",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
              Object {
                "id": 2,
                "name": "Android",
              },
            ],
            "title": "React",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 33,
            "image": "none",
            "isbn": "9784834002720",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 13,
                "name": "HTML",
              },
              Object {
                "id": 14,
                "name": "CSS",
              },
            ],
            "title": "バーコード最終確認",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 34,
            "image": "none",
            "isbn": "9784774193830",
            "published": "2017-11-21T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 15,
                "name": "TypeScript",
              },
              Object {
                "id": 17,
                "name": "People",
              },
            ],
            "title": "intellj IDEA",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 13,
            "image": "none",
            "isbn": "9784844338154",
            "published": "2018-02-09T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
            ],
            "title": "基礎Ruby on Rails",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 35,
            "image": "none",
            "isbn": "9784774172736",
            "published": "2015-05-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 12,
                "name": "JavaScript",
              },
            ],
            "title": "jquery",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 46,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24090349.png",
            "isbn": "9784048678841",
            "published": "2010-03-02T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "リファクタリングRuby",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 15,
            "image": "none",
            "isbn": "9784873115658",
            "published": "2016-04-11T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "リーダブルコード",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 48,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24102621.png",
            "isbn": "9784798118154",
            "published": "2008-12-03T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "zsh最強シェル入門",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 36,
            "image": "none",
            "isbn": "9784873114996",
            "published": "2018-02-16T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 17,
                "name": "People",
              },
            ],
            "title": "BeingGeek",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 47,
            "image": "none",
            "isbn": "9784844365501",
            "published": "2015-12-24T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "ランディングページデザインメソッド",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-18T00:00:00Z",
            "id": 43,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SunMar18111526.png",
            "isbn": "9784569808581",
            "published": "2018-02-18T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "てすと",
            "updated_at": "2018-03-18T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 49,
            "image": "none",
            "isbn": "9784865940046",
            "published": "2018-03-23T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "てすと",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 50,
            "image": "none",
            "isbn": "9784048933070",
            "published": "2018-02-24T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "社畜ちゃん",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 51,
            "image": "none",
            "isbn": "9784063766417",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 52,
            "image": "none",
            "isbn": "9784063766424",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン2",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 56,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24132702.png",
            "isbn": "9784063766516",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン3",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 58,
            "image": "none",
            "isbn": "9784063766639",
            "published": "2018-02-24T00:00:00Z",
            "status": true,
            "tags": Array [
              Object {
                "id": 2,
                "name": "Android",
              },
              Object {
                "id": 10,
                "name": "Python",
              },
            ],
            "title": "デビルマン4",
            "updated_at": "2018-03-24T00:00:00Z",
          },
        ],
        "disableVirtualization": false,
        "extraData": Array [
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 2,
            "image": "none",
            "isbn": "9784774184111",
            "published": "2018-02-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "javascript ",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 14,
            "image": "none",
            "isbn": "9784774183923",
            "published": "2018-02-12T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ghj",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 16,
            "image": "none",
            "isbn": "9780004195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングGo言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 17,
            "image": "none",
            "isbn": "9780104195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 19,
            "image": "none",
            "isbn": "9781111115025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 1,
            "image": "none",
            "isbn": "9784873113944",
            "published": "2009-01-26T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
            ],
            "title": "プログラミング言語 Ruby",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 23,
            "image": "none",
            "isbn": "9780987678909",
            "published": "2014-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングRuby",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 25,
            "image": "none",
            "isbn": "9780987678988",
            "published": "2014-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングR",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-14T00:00:00Z",
            "id": 20,
            "image": "none",
            "isbn": "9780004195095",
            "published": "2014-04-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "スターティングRuby",
            "updated_at": "2018-03-14T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 26,
            "image": "none",
            "isbn": "9789867165289",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "Docker実践ガイド impress top gearシリーズ",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 27,
            "image": "none",
            "isbn": "9784949999120",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ReactNative",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 28,
            "image": "none",
            "isbn": "9784063300468",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 11,
                "name": "C",
              },
              Object {
                "id": 13,
                "name": "HTML",
              },
              Object {
                "id": 16,
                "name": "PHP",
              },
              Object {
                "id": 1,
                "name": "Ruby",
              },
              Object {
                "id": 2,
                "name": "Android",
              },
            ],
            "title": "タグテスト",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 29,
            "image": "none",
            "isbn": "9784797363821",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 12,
                "name": "JavaScript",
              },
            ],
            "title": "ReactNative",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 30,
            "image": "none",
            "isbn": "9784797372410",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
              Object {
                "id": 2,
                "name": "Android",
              },
            ],
            "title": "React",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-15T00:00:00Z",
            "id": 33,
            "image": "none",
            "isbn": "9784834002720",
            "published": "2018-02-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 13,
                "name": "HTML",
              },
              Object {
                "id": 14,
                "name": "CSS",
              },
            ],
            "title": "バーコード最終確認",
            "updated_at": "2018-03-15T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 34,
            "image": "none",
            "isbn": "9784774193830",
            "published": "2017-11-21T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 15,
                "name": "TypeScript",
              },
              Object {
                "id": 17,
                "name": "People",
              },
            ],
            "title": "intellj IDEA",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 13,
            "image": "none",
            "isbn": "9784844338154",
            "published": "2018-02-09T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 1,
                "name": "Ruby",
              },
            ],
            "title": "基礎Ruby on Rails",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 35,
            "image": "none",
            "isbn": "9784774172736",
            "published": "2015-05-15T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 12,
                "name": "JavaScript",
              },
            ],
            "title": "jquery",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 46,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24090349.png",
            "isbn": "9784048678841",
            "published": "2010-03-02T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "リファクタリングRuby",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 15,
            "image": "none",
            "isbn": "9784873115658",
            "published": "2016-04-11T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "リーダブルコード",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 48,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24102621.png",
            "isbn": "9784798118154",
            "published": "2008-12-03T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "zsh最強シェル入門",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-16T00:00:00Z",
            "id": 36,
            "image": "none",
            "isbn": "9784873114996",
            "published": "2018-02-16T00:00:00Z",
            "status": false,
            "tags": Array [
              Object {
                "id": 17,
                "name": "People",
              },
            ],
            "title": "BeingGeek",
            "updated_at": "2018-03-16T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 47,
            "image": "none",
            "isbn": "9784844365501",
            "published": "2015-12-24T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "ランディングページデザインメソッド",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-18T00:00:00Z",
            "id": 43,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SunMar18111526.png",
            "isbn": "9784569808581",
            "published": "2018-02-18T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "てすと",
            "updated_at": "2018-03-18T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 49,
            "image": "none",
            "isbn": "9784865940046",
            "published": "2018-03-23T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "てすと",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 50,
            "image": "none",
            "isbn": "9784048933070",
            "published": "2018-02-24T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "社畜ちゃん",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 51,
            "image": "none",
            "isbn": "9784063766417",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 52,
            "image": "none",
            "isbn": "9784063766424",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン2",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 56,
            "image": "https://s3-ap-northeast-1.amazonaws.com/book-seeker/static/images/SatMar24132702.png",
            "isbn": "9784063766516",
            "published": "2018-02-24T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "デビルマン3",
            "updated_at": "2018-03-24T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-24T00:00:00Z",
            "id": 58,
            "image": "none",
            "isbn": "9784063766639",
            "published": "2018-02-24T00:00:00Z",
            "status": true,
            "tags": Array [
              Object {
                "id": 2,
                "name": "Android",
              },
              Object {
                "id": 10,
                "name": "Python",
              },
            ],
            "title": "デビルマン4",
            "updated_at": "2018-03-24T00:00:00Z",
          },
        ],
        "horizontal": false,
        "initialNumToRender": 10,
        "keyExtractor": [Function],
        "maxToRenderPerBatch": 10,
        "numColumns": 1,
        "onEndReachedThreshold": 2,
        "onRefresh": [MockFunction],
        "refreshing": false,
        "renderItem": [Function],
        "scrollEventThrottle": 50,
        "style": Object {
          "flex": 1,
          "marginTop": 0,
          "padding": 0,
        },
        "updateCellsBatchingPeriod": 50,
        "windowSize": 21,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<BookList /> booksが変更されたとき 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookList
    books={
      Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "isbn": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "isbn": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "isbn": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "isbn": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "isbn": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
      ]
    }
    isLoading={false}
    onRefresh={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ListEmptyComponent": [Function],
      "data": Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "isbn": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "isbn": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "isbn": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "isbn": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "isbn": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
      ],
      "disableVirtualization": false,
      "extraData": Array [
        Object {
          "created_at": "2018-03-09T00:00:00Z",
          "id": 2,
          "image": "none",
          "isbn": "9784774184111",
          "published": "2018-02-09T00:00:00Z",
          "status": true,
          "tags": Array [],
          "title": "javascript ",
          "updated_at": "2018-03-09T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-12T00:00:00Z",
          "id": 14,
          "image": "none",
          "isbn": "9784774183923",
          "published": "2018-02-12T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "ghj",
          "updated_at": "2018-03-12T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 16,
          "image": "none",
          "isbn": "9780004195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングGo言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 17,
          "image": "none",
          "isbn": "9780104195025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
        Object {
          "created_at": "2018-03-13T00:00:00Z",
          "id": 19,
          "image": "none",
          "isbn": "9781111115025",
          "published": "2016-04-09T00:00:00Z",
          "status": false,
          "tags": Array [],
          "title": "スターティングC言語",
          "updated_at": "2018-03-13T00:00:00Z",
        },
      ],
      "horizontal": false,
      "initialNumToRender": 10,
      "keyExtractor": [Function],
      "maxToRenderPerBatch": 10,
      "numColumns": 1,
      "onEndReachedThreshold": 2,
      "onRefresh": [MockFunction],
      "refreshing": false,
      "renderItem": [Function],
      "scrollEventThrottle": 50,
      "style": Object {
        "flex": 1,
        "marginTop": 0,
        "padding": 0,
      },
      "updateCellsBatchingPeriod": 50,
      "windowSize": 21,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ListEmptyComponent": [Function],
        "data": Array [
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 2,
            "image": "none",
            "isbn": "9784774184111",
            "published": "2018-02-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "javascript ",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 14,
            "image": "none",
            "isbn": "9784774183923",
            "published": "2018-02-12T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ghj",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 16,
            "image": "none",
            "isbn": "9780004195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングGo言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 17,
            "image": "none",
            "isbn": "9780104195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 19,
            "image": "none",
            "isbn": "9781111115025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
        ],
        "disableVirtualization": false,
        "extraData": Array [
          Object {
            "created_at": "2018-03-09T00:00:00Z",
            "id": 2,
            "image": "none",
            "isbn": "9784774184111",
            "published": "2018-02-09T00:00:00Z",
            "status": true,
            "tags": Array [],
            "title": "javascript ",
            "updated_at": "2018-03-09T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-12T00:00:00Z",
            "id": 14,
            "image": "none",
            "isbn": "9784774183923",
            "published": "2018-02-12T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "ghj",
            "updated_at": "2018-03-12T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 16,
            "image": "none",
            "isbn": "9780004195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングGo言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 17,
            "image": "none",
            "isbn": "9780104195025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
          Object {
            "created_at": "2018-03-13T00:00:00Z",
            "id": 19,
            "image": "none",
            "isbn": "9781111115025",
            "published": "2016-04-09T00:00:00Z",
            "status": false,
            "tags": Array [],
            "title": "スターティングC言語",
            "updated_at": "2018-03-13T00:00:00Z",
          },
        ],
        "horizontal": false,
        "initialNumToRender": 10,
        "keyExtractor": [Function],
        "maxToRenderPerBatch": 10,
        "numColumns": 1,
        "onEndReachedThreshold": 2,
        "onRefresh": [MockFunction],
        "refreshing": false,
        "renderItem": [Function],
        "scrollEventThrottle": 50,
        "style": Object {
          "flex": 1,
          "marginTop": 0,
          "padding": 0,
        },
        "updateCellsBatchingPeriod": 50,
        "windowSize": 21,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
